# caseutil

./: .bumpversion.toml  .gitignore  .readthedocs.yaml  CHANGELOG.md  Justfile  Makefile  README.md  Taskfile.yml  docsubfile.py  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.dev/: Brewfile  Dockerfile  compose.yaml  requirements.dev.txt
.github/workflows/: codeql.yml
NEWS.d/: 32.added.md  32.changed.md  32.docs.md  32.misc.1.md  32.misc.2.md  32.misc.3.md  32.misc.4.md  65.fixed.md  66.fixed.md
docs/: alternatives.md  classification.md  index.md  requirements.txt  tokenize.md
docs/part/: badges.md  cases-table.md  cli.md  features.md  title.md  usage.md
src/caseutil/: __init__.py  __main__.py  __main__.pyi  cases.py  cases.pyi
tests/: data.py  test_cli.py  test_cli.txt  test_operations.py  test_readme.txt  test_simple.txt  test_tokenize.txt  test_tokenizer.py  test_usage.py
