[metadata]

# NOTE: This file is needed for backwards compatibility with older Python versions only
# NOTE: Keep in sync with pyproject.toml (version is updated automatically)

name = caseutil
version = 0.7.0
description = Case convert and verify for Python: snake_case, camelCase, kebab-case, and more.
author = Michael Makukha
author_email = m.makukha@gmail.com

[options]
packages =
   caseutil
package_dir =
    = src
